log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 05:59:32 PM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:15: error: invalid type argument of unary ‘*’ (have ‘int’)
   17 |   lista->data=*array[0];
      |               ^~~~~~~~~
Compilation failed
70205da
